--- a/pom.xml
+++ b/pom.xml
@@ -17,12 +17,6 @@
         <junit.version>4.12</junit.version>
     </properties>
 
-    <repositories>
-        <repository>
-            <id>jitpack.io</id>
-            <url>https://jitpack.io</url>
-        </repository>
-    </repositories>
 
     <dependencies>
         <dependency>
@@ -53,11 +47,14 @@
             <version>RELEASE</version>
             <scope>test</scope>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.github.kittinunf.fuel/fuel -->
         <dependency>
-            <groupId>com.github.User</groupId>
-            <artifactId>Repo</artifactId>
-            <version>Tag</version>
+            <groupId>com.github.kittinunf.fuel</groupId>
+            <artifactId>fuel</artifactId>
+            <version>2.2.3</version>
         </dependency>
+
+
     </dependencies>
 
     <build>
